[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudecho"
version = "0.1.0"
description = "云忆 CloudEcho - 为群聊注入记忆的 RAG Agent"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    {name = "Author"},
]
keywords = ["qq", "rag", "agent", "onnx", "lancedb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=2.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "lancedb>=0.6.0",
    "pyarrow>=15.0.0",
    "onnxruntime>=1.17.0",
    "transformers>=4.38.0",
    "huggingface-hub>=0.20.0",
    "optimum[onnxruntime]>=1.17.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
cloudecho = "cli:main"

[project.urls]
Homepage = "https://github.com/123321-QSTUDIO/cloudecho"
Issues = "https://github.com/123321-QSTUDIO/cloudecho/issues"

[tool.setuptools]
py-modules = [
    "agent",
    "app",
    "cli",
    "config",
    "database",
    "embedding_client",
    "llm_client",
    "model_manager",
    "rag_engine",
    "reranker",
    "vector_store",
]
